# tui-realm

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  cliff.toml  codecov.yml
crates/extra/tui-realm-textarea/: CHANGELOG.md  Cargo.toml  README.md
crates/extra/tui-realm-textarea/examples/: demo.rs  editor.rs  single_line.rs
crates/extra/tui-realm-textarea/src/: fmt.rs  lib.rs
crates/extra/tui-realm-treeview/: CHANGELOG.md  Cargo.toml  README.md
crates/extra/tui-realm-treeview/examples/: demo.rs
crates/extra/tui-realm-treeview/src/: lib.rs  mock.rs  serializer.rs  stateful_tree.rs  tree_state.rs  widget.rs
crates/tui-realm-stdlib/: CHANGELOG.md  Cargo.toml  README.md
crates/tui-realm-stdlib/.github/workflows/: build.yml  coverage.yml  linux.yml  ratatui.yml  tests.yml  tui.yml
crates/tui-realm-stdlib/docs/: components.md
crates/tui-realm-stdlib/examples/: bar_chart.rs  canvas.rs  chart.rs  checkbox.rs  container.rs  demo.rs  gallery.rs  gauge.rs  input.rs  label.rs  line_gauge.rs  list.rs  paragraph.rs  progress_bar.rs  radio.rs  select.rs  span.rs  sparkline.rs  spinner.rs  table.rs  textarea.rs
crates/tui-realm-stdlib/examples/utils/: context.rs  data_gen.rs  loader.rs  mod.rs  model.rs
crates/tui-realm-stdlib/src/: lib.rs  prop_ext.rs  utils.rs
crates/tui-realm-stdlib/src/components/: bar_chart.rs  canvas.rs  chart.rs  checkbox.rs  container.rs  gauge.rs  input.rs  label.rs  line_gauge.rs  list.rs  mod.rs  paragraph.rs  phantom.rs  progress_bar.rs  props.rs  radio.rs  select.rs  span.rs  sparkline.rs  spinner.rs  states.rs  table.rs  textarea.rs
crates/tuirealm/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
crates/tuirealm-derive/: Cargo.toml  README.md
crates/tuirealm-derive/.github/workflows/: build.yml
crates/tuirealm-derive/src/: lib.rs
crates/tuirealm-derive/tests/: component_derive.rs
crates/tuirealm-stdlib/: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
crates/tuirealm-stdlib/.github/workflows/: tests.yml
crates/tuirealm-stdlib/docs/: components.md
crates/tuirealm-stdlib/examples/: bar_chart.rs  canvas.rs  chart.rs  checkbox.rs  container.rs  gauge.rs  input.rs  label.rs  line_gauge.rs  list.rs  paragraph.rs  radio.rs  select.rs  span.rs  sparkline.rs  spinner.rs  table.rs  textarea.rs
crates/tuirealm-stdlib/examples/utils/: mod.rs  model.rs
crates/tuirealm-stdlib/src/: lib.rs  prop_ext.rs  utils.rs
crates/tuirealm-stdlib/src/components/: bar_chart.rs  canvas.rs  checkbox.rs  container.rs  gauge.rs  input.rs  label.rs  line_gauge.rs  list.rs  mod.rs  paragraph.rs  phantom.rs  props.rs  radio.rs  select.rs  span.rs  sparkline.rs  spinner.rs  states.rs  table.rs  textarea.rs
crates/tuirealm-stdlib/tests/: common.rs  component_bar_chart.rs  component_canvas.rs  component_chart.rs  component_checkbox.rs  component_container.rs  component_gauge.rs  component_input.rs  component_label.rs  component_line_gauge.rs  component_list.rs  component_paragraph.rs  component_phantom.rs  component_radio.rs  component_select.rs  component_span.rs  component_sparkline.rs  component_spinner.rs  component_table.rs  component_textarea.rs
crates/tuirealm-stdlib/tests/snapshots/: component_bar_chart__bar_chart_default.snap  component_canvas__canvas_default.snap  component_chart__chart_default.snap  component_checkbox__checkbox_default.snap  component_container__container_with_children.snap  component_gauge__gauge_default.snap  component_gauge__gauge_empty.snap  component_gauge__gauge_full.snap  component_input__input_default.snap  component_input__input_empty.snap  component_input__input_no_borders.snap  component_input__input_password.snap  component_label__label_centered.snap  component_label__label_default.snap  component_line_gauge__line_gauge_default.snap  component_line_gauge__line_gauge_empty.snap  component_list__list_default.snap  component_list__list_empty.snap  component_paragraph__paragraph_centered.snap  component_paragraph__paragraph_default.snap  component_phantom__phantom_default.snap  component_radio__radio_default.snap  component_select__select_closed.snap  component_select__select_open.snap  component_span__span_centered.snap  component_span__span_default.snap  component_sparkline__sparkline_default.snap  component_sparkline__sparkline_empty.snap  component_spinner__spinner_default.snap  component_table__table_default.snap  component_textarea__textarea_stdlib_default.snap
crates/tuirealm-textarea/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/tuirealm-textarea/.github/workflows/: build.yml
crates/tuirealm-textarea/examples/: editor.rs  single_line.rs
crates/tuirealm-textarea/src/: fmt.rs  lib.rs
crates/tuirealm-textarea/tests/: common.rs  component_textarea.rs
crates/tuirealm-textarea/tests/snapshots/: component_textarea__textarea_crate_empty.snap  component_textarea__textarea_crate_multiline.snap  component_textarea__textarea_crate_singleline.snap
crates/tuirealm-treeview/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
crates/tuirealm-treeview/.github/ISSUE_TEMPLATE/: feature_request.md
crates/tuirealm-treeview/examples/: demo.rs  filesystem.rs
crates/tuirealm-treeview/src/: lib.rs  mock.rs  tree_state.rs  widget.rs
crates/tuirealm-treeview/tests/: component_treeview.rs
crates/tuirealm-treeview/tests/snapshots/: component_treeview__treeview_default.snap
crates/tuirealm/.github/ISSUE_TEMPLATE/: new_app_component.md
crates/tuirealm/.github/workflows/: codeberg-mirror.yml
crates/tuirealm/docs/en/: advanced.md  get-started.md  migrating-4.0.md  migrating-legacy.md
crates/tuirealm/examples/: arbitrary_data.rs  async_ports.rs  checkbox.rs  demo.rs  event_display.rs  gallery.rs  inline_display.rs  label.rs  list.rs  paragraph.rs  progress_bar.rs  scrolltable.rs  span.rs  sparkline.rs  table.rs  textarea.rs
crates/tuirealm/src/: lib.rs  macros.rs  ratatui.rs  terminal.rs  testing.rs  tui.rs  view.rs
crates/tuirealm_derive/: CHANGELOG.md  Cargo.toml  README.md
crates/tuirealm_derive/src/: lib.rs
(+318 files in other folders)
