[workspace]
resolver = "3"
members = [
    "crates/tuirealm",
    "crates/tuirealm_derive",
    "crates/tui-realm-stdlib",
    "crates/extra/tui-realm-textarea",
    "crates/extra/tui-realm-treeview",
]

[workspace.package]
authors = [
    "Christian Visintin <christian.visintin@veeso.dev>",
    "hasezoey <hasezoey@gmail.com>",
]
categories = ["command-line-utilities"]
edition = "2024"
homepage = "https://github.com/veeso/tui-realm"
keywords = ["tui", "terminal"]
license = "MIT"
repository = "https://github.com/veeso/tui-realm"
rust-version = "1.86.0"

[workspace.dependencies]
async-trait = "0.1"
bitflags = "2"
cli-clipboard = "0.4"
crossterm = "0.29"
dyn-clone = "1"
futures-util = { version = "0.3", default-features = false }
lazy-regex = "3"
orange-trees = "0.1"
pretty_assertions = "1"
proc-macro2 = "1"
quote = "1"
rand = "0.10"
ratatui = { version = "0.30", default-features = false, features = ["std", "layout-cache"] }
serde = { version = "1", features = ["derive"] }
syn = "2"
tempfile = "3"
termion = "4"
termwiz = "0.23"
textwrap = "0.16"
thiserror = "2"
tokio = { version = "1", default-features = false }
tokio-util = { version = "0.7", default-features = false }
toml = "0.9"
tui-realm-stdlib = { path = "crates/tui-realm-stdlib", version = "4", default-features = false }
tui-textarea = { package = "tui-textarea-2", version = "0.10", default-features = false, features = ["ratatui"] }
tuirealm = { path = "crates/tuirealm", version = "4", default-features = false }
tuirealm_derive = { path = "crates/tuirealm_derive", version = "4" }
unicode-width = "0.2"
