[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = [
  "Christian Visintin <christian.visintin@veeso.dev>",
  "hasezoey <hasezoey@gmail.com>",
]
edition = "2024"
license = "MIT"
rust-version = "1.88"
repository = "https://github.com/veeso/tui-realm"
homepage = "https://github.com/veeso/tui-realm"

[workspace.dependencies]
tuirealm = { path = "./crates/tuirealm", version = "4", default-features = false }
tui-realm-stdlib = { path = "./crates/tuirealm-stdlib", version = "4" }
tuirealm_derive = { path = "./crates/tuirealm-derive", version = "4" }
