[package]
name = "tui-realm-stdlib"
version = "3.1.0"
authors = [
  "Christian Visintin <christian.visintin@veeso.dev>",
  "hasezoey <hasezoey@gmail.com>",
]
edition = "2024"
categories = ["command-line-utilities"]
description = "Standard components library for tui-realm."
documentation = "https://docs.rs/tui-realm-stdlib"
homepage = "https://github.com/veeso/tui-realm-stdlib"
include = ["examples/**/*", "src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["tui", "terminal"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/veeso/tui-realm-stdlib"
rust-version = "1.86"

[dependencies]
textwrap = "^0.16"
tuirealm = { version = "3", default-features = false, features = ["derive"], git = "https://github.com/veeso/tui-realm.git", rev = "db6419c40636b28d3b26a200fc5d4af41bc1c99c" }
unicode-width = "^0.2"

[dev-dependencies]
pretty_assertions = "1"
rand = "0.10"
tuirealm = { version = "3", features = ["crossterm"], git = "https://github.com/veeso/tui-realm.git", rev = "db6419c40636b28d3b26a200fc5d4af41bc1c99c" }

[features]

[[example]]
name = "bar_chart"
path = "examples/bar_chart.rs"

[[example]]
name = "canvas"
path = "examples/canvas.rs"

[[example]]
name = "chart"
path = "examples/chart.rs"

[[example]]
name = "checkbox"
path = "examples/checkbox.rs"

[[example]]
name = "container"
path = "examples/container.rs"

[[example]]
name = "input"
path = "examples/input.rs"

[[example]]
name = "label"
path = "examples/label.rs"

[[example]]
name = "line_gauge"
path = "examples/line_gauge.rs"

[[example]]
name = "list"
path = "examples/list.rs"

[[example]]
name = "paragraph"
path = "examples/paragraph.rs"

[[example]]
name = "progress_bar"
path = "examples/progress_bar.rs"

[[example]]
name = "radio"
path = "examples/radio.rs"

[[example]]
name = "select"
path = "examples/select.rs"

[[example]]
name = "span"
path = "examples/span.rs"

[[example]]
name = "sparkline"
path = "examples/sparkline.rs"

[[example]]
name = "spinner"
path = "examples/spinner.rs"

[[example]]
name = "table"
path = "examples/table.rs"

[[example]]
name = "textarea"
path = "examples/textarea.rs"
