[package]
name = "tui-realm-stdlib"
version = "4.0.0"
edition.workspace = true
authors.workspace = true
categories.workspace = true
description = "Standard components library for tui-realm."
documentation = "https://docs.rs/tui-realm-stdlib"
homepage.workspace = true
include = ["examples/**/*", "src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[dependencies]
textwrap = { workspace = true }
tuirealm = { workspace = true, features = ["derive"] }
unicode-width = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
rand = { workspace = true }
tuirealm = { workspace = true, features = ["crossterm"] }

[[example]]
name = "bar_chart"
path = "examples/bar_chart.rs"

[[example]]
name = "canvas"
path = "examples/canvas.rs"

[[example]]
name = "chart"
path = "examples/chart.rs"

[[example]]
name = "checkbox"
path = "examples/checkbox.rs"

[[example]]
name = "container"
path = "examples/container.rs"

[[example]]
name = "gauge"
path = "examples/gauge.rs"

[[example]]
name = "input"
path = "examples/input.rs"

[[example]]
name = "label"
path = "examples/label.rs"

[[example]]
name = "line_gauge"
path = "examples/line_gauge.rs"

[[example]]
name = "list"
path = "examples/list.rs"

[[example]]
name = "paragraph"
path = "examples/paragraph.rs"

[[example]]
name = "radio"
path = "examples/radio.rs"

[[example]]
name = "select"
path = "examples/select.rs"

[[example]]
name = "span"
path = "examples/span.rs"

[[example]]
name = "sparkline"
path = "examples/sparkline.rs"

[[example]]
name = "spinner"
path = "examples/spinner.rs"

[[example]]
name = "table"
path = "examples/table.rs"

[[example]]
name = "textarea"
path = "examples/textarea.rs"
