[package]
name = "tui-realm-textarea"
authors.workspace =  true
rust-version.workspace =  true
license.workspace =  true
repository.workspace =  true
homepage.workspace = true
version = "2.1.0"
edition = "2021" # TODO: upgrade to match workspace
categories = ["command-line-utilities"]
description = "textarea component for tui-realm"
documentation = "https://docs.rs/tui-realm-textarea"
include = ["examples/**/*", "src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["tui", "terminal"]
readme = "README.md"

[dependencies]
cli-clipboard = { version = "^0.4", optional = true }
lazy-regex = "^3"
tuirealm = { version = "2", default-features = false, features = ["derive"] }
tui-textarea = "^0.7"

[dev-dependencies]
crossterm = "^0.28"
pretty_assertions = "1"
tui-realm-stdlib = "2"

[features]
default = ["crossterm"]
clipboard = ["cli-clipboard"]
search = ["tui-textarea/search"]
crossterm = ["tuirealm/crossterm"]
termion = ["tuirealm/termion"]

[[example]]
name = "editor"
path = "examples/editor.rs"
required-features = ["crossterm"]

[[example]]
name = "single-line"
path = "examples/single_line.rs"
required-features = ["crossterm"]
