[package]
name = "tui-realm-textarea"
authors.workspace =  true
rust-version.workspace =  true
license.workspace =  true
repository.workspace =  true
homepage.workspace = true
edition.workspace = true
version = "2.1.0"
categories = ["command-line-utilities"]
description = "textarea component for tui-realm"
documentation = "https://docs.rs/tui-realm-textarea"
include = ["examples/**/*", "src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["tui", "terminal"]
readme = "README.md"

[dependencies]
tuirealm.workspace = true
lazy-regex = "^3"
tui-textarea-2 = "^0.10"

[dev-dependencies]
tuirealm = { workspace = true, features = ["derive"] }
tui-realm-stdlib.workspace = true
crossterm = "^0.28"
insta = "1"
pretty_assertions = "1"

[features]
default = ["crossterm"]
search = ["tui-textarea-2/search"]
crossterm = ["tuirealm/crossterm"]
termion = ["tuirealm/termion"]

[[example]]
name = "editor"
path = "examples/editor.rs"
required-features = ["crossterm"]

[[example]]
name = "single-line"
path = "examples/single_line.rs"
required-features = ["crossterm"]
