[package]
name = "tuirealm"
version.workspace =  true
authors.workspace =  true
edition.workspace =  true
rust-version.workspace =  true
license.workspace =  true
repository.workspace =  true
homepage.workspace = true
categories = ["command-line-utilities"]
description = "A tui-rs framework to build tui interfaces, inspired by React and Elm."
documentation = "https://docs.rs/tuirealm"
include = ["examples/**/*", "src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["tui", "terminal"]
readme = "README.md"

[dependencies]
async-trait = { version = "0.1", optional = true }
bitflags = "2"
dyn-clone = "1"
futures-util = { version = "0.3", default-features = false, optional = true }
lazy-regex = "3"
ratatui = { version = "0.30", default-features = false, features = ["std", "layout-cache"] }
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2"
tokio = { version = "1", features = [
  "rt",
  "macros",
  "time",
], default-features = false, optional = true }
tokio-util = { version = "0.7", features = [
  "rt",
], default-features = false, optional = true }
tuirealm_derive = { path = "../tuirealm-derive", version = "2", optional = true }

crossterm = { version = "0.29", optional = true }
termion = { version = "^4", optional = true }
termwiz = { version = "0.23", optional = true }

[dev-dependencies]
pretty_assertions = "^1"
tempfile = "^3"
tokio = { version = "1", features = ["full"] }
toml = "^0.9"

[features]
default = ["derive", "crossterm"]
async-ports = [
  "dep:async-trait",
  "dep:tokio",
  "dep:tokio-util",
  "crossterm?/event-stream",
  "dep:futures-util",
]
derive = ["dep:tuirealm_derive"]
serialize = ["dep:serde", "bitflags/serde"]

crossterm = ["dep:crossterm", "ratatui/crossterm"]
termion = ["dep:termion", "ratatui/termion"]
termwiz = ["dep:termwiz", "ratatui/termwiz"]

[[example]]
name = "async-ports"
path = "examples/async_ports.rs"
required-features = ["async-ports", "crossterm"]

[[example]]
name = "demo"
path = "examples/demo/demo.rs"
required-features = ["crossterm"]

[[example]]
name = "user-events"
path = "examples/user_events/user_events.rs"
required-features = ["crossterm"]

[[example]]
name = "arbitrary-data"
path = "examples/arbitrary_data.rs"
required-features = ["crossterm"]

[[example]]
name = "inline-display"
path = "examples/inline_display.rs"
required-features = ["crossterm"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
