[package]
name = "tuirealm_derive"
version = "1.0.0"
authors = ["Christian Visintin"]
edition = "2021"
categories = ["command-line-utilities"]
description = "Derive macro which automatically implements the MockComponent trait"
documentation = "https://docs.rs/tuirealm_derive"
homepage = "https://github.com/veeso/tuirealm_derive"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["tui", "terminal"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/veeso/tuirealm_derive"

[lib]
doctest = false
name = "tuirealm_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[features]
