[package]
name = "tuirealm_derive"
version = "4.0.0"
edition.workspace = true
authors.workspace = true
description = "Derive macro which automatically implements the Component trait"
license.workspace = true
repository.workspace = true
categories.workspace = true
documentation = "https://docs.rs/tuirealm_derive"
homepage.workspace = true
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords.workspace = true
readme = "README.md"
rust-version.workspace = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[lib]
doctest = false
name = "tuirealm_derive"
proc-macro = true
