[package]
name = "tui-realm-textarea"
version = "4.0.0"
edition.workspace = true
authors.workspace = true
categories.workspace = true
description = "textarea component for tui-realm"
documentation = "https://docs.rs/tui-realm-textarea"
homepage.workspace = true
include = ["examples/**/*", "src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[features]
clipboard = ["dep:cli-clipboard"]
crossterm = ["tuirealm/crossterm"]
default = ["crossterm"]
search = ["tui-textarea/search"]
termion = ["tuirealm/termion"]

[dependencies]
cli-clipboard = { workspace = true, optional = true }
lazy-regex = { workspace = true }
tui-textarea = { workspace = true }
tuirealm = { workspace = true, features = ["derive"] }

[dev-dependencies]
crossterm = { workspace = true }
pretty_assertions = { workspace = true }
tui-realm-stdlib = { workspace = true }

[[example]]
name = "editor"
path = "examples/editor.rs"
required-features = ["crossterm"]

[[example]]
name = "single-line"
path = "examples/single_line.rs"
required-features = ["crossterm"]
