[package]
name = "tui-realm-treeview"
version = "4.0.0"
edition.workspace = true
authors.workspace = true
description = "Treeview component for tui-realm"
license.workspace = true
repository.workspace = true
categories.workspace = true
documentation = "https://docs.rs/tui-realm-treeview"
homepage.workspace = true
include = ["examples/**/*", "src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords.workspace = true
readme = "README.md"
rust-version.workspace = true

[features]
crossterm = ["tuirealm/crossterm"]
default = ["crossterm"]
termion = ["tuirealm/termion"]

[dependencies]
orange-trees = { workspace = true }
tuirealm = { workspace = true, features = ["derive"] }
unicode-width = { workspace = true }

[dev-dependencies]
crossterm = { workspace = true }
pretty_assertions = { workspace = true }
tui-realm-stdlib = { workspace = true }

[[example]]
name = "demo"
path = "examples/demo.rs"
required-features = ["crossterm"]
